--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -1,81 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<!-- Use DrawerLayout as root container for activity -->
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    android:fitsSystemWindows="true">
+
 
     <LinearLayout
-        android:id="@+id/results_layout"
+        android:id="@+id/header_frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="top"
         android:orientation="vertical">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            tools:layout_height="56dp" />
 
-        <TextView
-            android:id="@+id/tvTitle"
+        <FrameLayout
+            android:id="@+id/content_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/results" />
-
-        <me.itangqi.waveloadingview.WaveLoadingView
-            android:id="@+id/waveHydrationLvl"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="24dp"
-            app:wlv_borderColor="@color/colorPrimaryDark"
-            app:wlv_borderWidth="2dp"
-            app:wlv_progressValue="79"
-            app:wlv_round_rectangle="true"
-            app:wlv_shapeType="circle"
-            app:wlv_titleCenter="-- %"
-            app:wlv_titleCenterColor="@android:color/white"
-            app:wlv_titleCenterSize="48sp"
-            app:wlv_titleCenterStrokeColor="@color/colorPrimary"
-            app:wlv_titleCenterStrokeWidth="2dp"
-            app:wlv_triangle_direction="north"
-            app:wlv_waveAmplitude="40"
-            app:wlv_waveColor="@color/colorPrimary"
-            app:wlv_wave_background_Color="@android:color/white" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
 
-        <TextView
-            android:id="@+id/tvDrinkAmount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=" "
-            android:textSize="16sp" />
+        </FrameLayout>
 
-        <TextView
-            android:id="@+id/tvLastTest"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:text="@string/last_test"
-            android:textSize="16sp" />
 
     </LinearLayout>
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Button
-            android:id="@+id/bResults"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:text="@string/get_updated_results" />
-    </LinearLayout>
+    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
 
 
-</LinearLayout>
+    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/drawer_view" />
+
+
+</android.support.v4.widget.DrawerLayout>
+
